# tosminer

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: toshash_kernel.cl.h.in
src/: MinerCLI.cpp  MinerCLI.h  Version.h  main.cpp
src/api/: ApiServer.cpp  ApiServer.h
src/core/: Farm.cpp  Farm.h  Miner.cpp  Miner.h  TuningProfiles.h  Types.h  WorkPackage.h
src/cpu/: CPUMiner.cpp  CPUMiner.h
src/cuda/: CUDAMiner.cpp  CUDAMiner.h  toshash_kernel.cu
src/opencl/: CLMiner.cpp  CLMiner.h  toshash_kernel.cl
src/stratum/: StratumClient.cpp  StratumClient.h  StratumV2.cpp  StratumV2.h
src/toshash/: TosHash.cpp  TosHash.h
src/util/: GpuMonitor.cpp  GpuMonitor.h  Guards.h  Log.cpp  Log.h  MovingAverage.h
tests/: test_api_response.cpp  test_gpu_monitor.cpp  test_target.cpp
